--- a/procfile
+++ b/procfile
@@ -1,1 +1,2 @@
-web: gunicorn cozastore.wsgi --log-file - --workers 3
+web: gunicorn cozastore.wsgi
+web: gunicorn cozastore.wsgi:application --log-file -
