--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.10.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
-Django==5.2.8
+dj-database-url==3.0.1
+Django==5.2.9
 greenlet==3.2.4
+gunicorn==23.0.0
 idna==3.11
 mysqlclient==2.2.7
+packaging==25.0
 passlib==1.7.4
 pillow==12.0.0
+psycopg2-binary==2.9.11
+python-dotenv==1.2.1
 requests==2.32.5
 SQLAlchemy==2.0.44
 sqlparse==0.5.3
@@ -14,3 +19,4 @@ stripe==13.2.0
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+whitenoise==6.11.0
